# AI-DATASCIENCE-SMIT

./: README.md
AI_ASSIGNMENTS/01/: assign.py  assignment.md  main.py  pyproject.toml
Assignment_01/Conditional_Statements_01/: Python Assignment Part 1.txt
Assignment_01/Loops_02/: Python Assignment Part 2.txt
Assignment_02/dictionaries/: student.py
RAGDEEP/: pyproject.toml
