[project]
name = "ragdeep"
version = "0.1.0"
description = ""
authors = [
    {name = "imchatha@hotmail.com",email = "imchatha@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "streamlit (>=1.41.1,<2.0.0)",
    "langchain-community (>=0.3.16,<0.4.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
    "langchain (>=0.3.17,<0.4.0)",
    "pdfplumber (>=0.11.5,<0.12.0)",
    "open-text-embeddings (>=1.0.4,<2.0.0)",
    "ollama (>=0.4.7,<0.5.0)",
    "prompt-template (>=1.1.0,<2.0.0)",
    "sentence-transformers (>=3.4.1,<4.0.0)",
    "faiss-cpu (>=1.10.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
