[project]
name = "fastapi-firstapp"
version = "0.1.0"
description = "My first Fast API app"
authors = [
    {name = "imchatha@hotmail.com",email = "imchatha@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
